kubernetes/panel/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: panel
spec:
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: panel
