kubernetes/panel/ingressroutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: panel-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`panel.e2.pe`)
      kind: Rule
      services:
        - name: panel
          port: 8081
      middlewares:
        - name: https-redirect
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: panel-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`panel.e2.pe`)
      kind: Rule
      services:
        - name: panel
          port: 8081
      middlewares:
        - name: forward-auth
  tls:
    certResolver: default
